src/app/pages/status/status.page.scss
.photo-margin-top {
    height: 25px;
    background-color: #202020;
    
    .back-container {
        display: inline-block;
        cursor: pointer;
        margin-top: 4px;

        mat-icon {
            color: white;
            transform: scale(0.7);
            padding-left: 4px;
            margin-top: -1px;
        }

        .back-label {
            color: white;
            vertical-align: top;
        }
    }
}

.photo-margin-bottom {
    height: 20px;
    background-color: #202020;
}

.photo-container {
    width: 100%;
    background-color: #202020;
    position: relative;

    .icon {
        color: white;
        text-align: center;
        width: 40px;;
        display: table-cell;
        vertical-align: middle;
        cursor: pointer;
    }

    .icon-placeholder {
        width: 40px;;
        display: table-cell;
    }

    .custom-gallery {
        background-color: #202020;
        max-height: 600px;
    }

    .custom-gallery-browser {
        width: calc(100vw - 80px);
    }

    .content-warning {
        position: absolute;
        top:40%;
        width: 100%;
        text-align: center;
        z-index: 101;

        .text {
            font-size: 1em;
            margin-bottom: 8px;
            color: white;
            background-color: rgba(0, 0, 0, 0.5);
            border-radius: 10px;
            margin-left: auto;
            margin-right: auto;
            margin-bottom: 10px;
            padding: 4px 20px;
            width: fit-content;
        }
    }

    .blurhash {
        position: absolute;
        display: block;
        height: 100%;
        width: 100%;
        max-height: 600px;
        object-fit: contain;
        z-index: 100;
    }

    img {
        display: block;
        height: 100%;
        width: 100%;
        max-height: 600px;
        object-fit: contain;
        z-index: 99;
    }

    .photo-image-container-fixed {
        height: 600px;

        .content-warning {
            width: calc(100vw - 80px);
        }

        .blurhash {
            width: calc(100vw - 80px);
        }
    }
}

.photo-container-table {
    display:table;
}

.note {
    word-break: break-word;

    a {
        word-break: break-all;
    }
}

.category {
    mat-icon {
        transform: scale(1.6);
        opacity: 0.8;
    }

    .category-label {
        font-weight: 600;
        vertical-align: top;
    } 
}

.location {
    mat-icon {
        transform: scale(1.6);
        opacity: 0.8;
    }

    .location-label {
        vertical-align: top;
    } 
}

.license {
    mat-icon {
        transform: scale(1.6);
        opacity: 0.8;
    }

    .license-label {
        vertical-align: top;
    } 
}

.exif {
    mat-icon {
        transform: scale(1.6);
        opacity: 0.8;
    }

    .exif-label {
        vertical-align: top;
    }
}

.hdr {
    mat-icon {
        transform: scale(1.6);
        opacity: 0.8;
    }

    .hdr-label {
        vertical-align: top;
    }
}

.alt {
    mat-icon {
        transform: scale(1.6);
        opacity: 0.8;
    }

    .alt-label {
        font-style: italic;
        vertical-align: top;
    }
}

.properties {
    display: flex;
    align-items: center;
    font-weight: 300;

    mat-icon {
        transform: scale(0.75);
    }
}

.comments {
    ::ng-deep p {
        margin: 0;
    }

    .comment-actions {
        min-width: 86px;

        .favourited {
            transform: scale(0.6);
        }
    }

    .comment-text {
        word-break: break-word;

        a {
            word-break: break-all;
        }
    }
}

.replies {
    padding-left: 40px;
}

.small-button {
    min-width: 36px;
    padding-left: 2px;
    padding-right: 2px;

    &.context-left {
        mat-icon {
            margin-left: 6px;
            margin-right: 0;
        }
    }

    &.context-right {
        mat-icon {
            margin-right: 0;
            margin-left: 4px;
        }
    }
}

